<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shwu3484.feeling.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_marginTop="31dp"
        android:hint="@string/name_edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling"
        android:id="@+id/feelingTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEditText"
        android:layout_toEndOf="@+id/button"
        android:id="@+id/spinner"
        android:entries="@array/moods"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/energyToggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:layout_below="@+id/spinner"
        android:layout_alignRight="@+id/checkBox1"
        android:layout_alignEnd="@+id/checkBox1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meditate_switch"
        android:id="@+id/switch1"
        android:layout_alignTop="@+id/energyToggleButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_below="@+id/energyToggleButton"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yogaRadioGroup"
        android:orientation="horizontal"

        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton1"
        android:text="@string/yoga"
        />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:text="@string/yoga2"
            />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:text="@string/yoga1"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:text="@string/yoga3"
            />


    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_button"
        android:onClick="findMood"
        android:id="@+id/button"
        android:layout_gravity="bottom"
        android:layout_below="@+id/checkBox4"
        android:layout_alignRight="@+id/feelingTextView"
        android:layout_alignEnd="@+id/feelingTextView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conservative_check"
        android:id="@+id/checkBox1"
        android:layout_below="@+id/yogaRadioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enlightened_check"
        android:id="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_alignLeft="@+id/feelingTextView"
        android:layout_alignStart="@+id/feelingTextView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sarcastic_check"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretive_check"
        android:id="@+id/checkBox4"
        android:layout_alignTop="@+id/checkBox3"
        android:layout_toRightOf="@+id/feelingTextView"
        android:layout_toEndOf="@+id/feelingTextView" />

</RelativeLayout>
